--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> اللغة العربية الصف الاول متوسط الجزء الثاني</title>
+    <title> اللغة العربية الصف الثاني متوسط الجزء الثاني</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>  اللغة العربية الصف الاول متوسط الجزء الثاني</h1>
+    <h1>  اللغة العربية الصف الثاني متوسط الجزء الثاني</h1>
     <pre>
 
 --- PAGE 1 ---
@@ -5132,4 +5132,5 @@ S
 ١٣٥
     </pre>
 </body>
+
 </html>
